--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html{
+    scroll-behavior: smooth;
+}
+
+body {
+    @apply bg-zinc-900 text-zinc-50
+}
+
+/* Menu buttons */
+
+.menu-btn {
+    @apply w-10 h-10 grid place-items-center bg-zinc-50/10 rounded-xl
+     ring-inset ring-zinc-50/[0.02] backdrop-blur-2xl hover:bg-zinc-50/15
+     transition-[transform,background-color] active:scale-95
+
+}
+
+/* Navbar */
+
+.navbar {
+    @apply absolute top-full mt-2 right-0 min-w-40 p-2 bg-zinc-50/10 rounded-2xl ring-inset
+    ring-1 ring-zinc-50/55 scale-90 isolate blur-sm opacity-0 invisible 
+    transition-[opacity,transform,filter]
+}
+
+.navbar-active {
+    @apply opacity-100 blur-0 visible
+}
